[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Sprites/crosshair.png" type="Texture" id=1]
[ext_resource path="res://UI/Crosshair.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/UI/circle_crosshair1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/UI/crosshair_plant.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/UI/crosshair_default.png" type="Texture" id=5]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float amt : hint_range(0.0, 1.0);
uniform float edge_softness = 0.0;
uniform float circle_width = 0.2;
uniform vec4 color : hint_color;

float clamp_and_map(float value, float istart, float istop, float ostart, float ostop) {
    value = clamp(value, istart, istop);
    return ostart + (ostop - ostart) * ((value - istart) / (istop - istart));
}

void fragment() {
	float t = -0.7 * TIME;
	float d = distance(UV, vec2(0.5));
	// first: circle moving outwards
	float radius = 0.5 * mod(t, 1.0);
	float circle = float(d > radius-circle_width) * float(d<radius+circle_width);
	
	float radius2 = 0.5 * mod(t+0.33, 1.0);
	float circle2 = float(d > radius2-circle_width) * float(d<radius2+circle_width);
	
	float radius3 = 0.5 * mod(t+ 0.66, 1.0);
	float circle3 = float(d > (radius3-circle_width)) * float(d<(radius3+circle_width));
	COLOR = vec4(color.rgb, circle) + vec4(color.rgb, circle2) + vec4(color.rgb, circle3);
	COLOR.a = COLOR.a * pow(clamp_and_map(d, 0.0, 0.5, 1.0, 0.0), 1.7);
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/amt = 0.0
shader_param/edge_softness = 0.0
shader_param/circle_width = 0.027
shader_param/color = Color( 0.14902, 0.756863, 0.772549, 1 )

[sub_resource type="Animation" id=1]
resource_name = "CrosshairScanner"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CrosshairContainer/CrosshairControl/CrosshairScanner/CrosshairScanner:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CrosshairContainer/CrosshairControl/CrosshairScanner/CrosshairScanner2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -180.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("CrosshairContainer/CrosshairControl/CrosshairAction:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CrosshairContainer/CrosshairControl/CrosshairScanner/CrosshairScanner:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("CrosshairContainer/CrosshairControl/CrosshairScanner/CrosshairScanner2:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="Crosshair" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CrosshairContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CrosshairControl" type="Control" parent="CrosshairContainer"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2

[node name="CrosshairDefault" type="Sprite" parent="CrosshairContainer/CrosshairControl"]
unique_name_in_owner = true
visible = false
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="CrosshairPlant" type="Sprite" parent="CrosshairContainer/CrosshairControl"]
unique_name_in_owner = true
visible = false
modulate = Color( 0.607843, 0.819608, 0.337255, 1 )
scale = Vector2( 0.66, 0.66 )
texture = ExtResource( 4 )

[node name="CrosshairAction" type="Sprite" parent="CrosshairContainer/CrosshairControl"]
unique_name_in_owner = true
visible = false
modulate = Color( 0.768627, 0.517647, 0.192157, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="CrosshairScanner" type="Control" parent="CrosshairContainer/CrosshairControl"]
unique_name_in_owner = true
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="CrosshairScanner" type="Sprite" parent="CrosshairContainer/CrosshairControl/CrosshairScanner"]
modulate = Color( 0.192157, 0.396078, 0.607843, 1 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="CrosshairScanner2" type="Sprite" parent="CrosshairContainer/CrosshairControl/CrosshairScanner"]
modulate = Color( 0.45098, 0.662745, 0.87451, 1 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="CrosshairHop" type="Control" parent="CrosshairContainer/CrosshairControl"]
unique_name_in_owner = true
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="TextureRect" type="ColorRect" parent="CrosshairContainer/CrosshairControl/CrosshairHop"]
material = SubResource( 4 )
margin_left = -43.0
margin_top = -44.0
margin_right = 43.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 43, 43 )

[node name="Control" type="Control" parent="CrosshairContainer"]
margin_left = 640.0
margin_top = 360.0
margin_right = 640.0
margin_bottom = 360.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CrosshairScanner = SubResource( 1 )
anims/RESET = SubResource( 2 )
